--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-crispy-forms==2.1
 django-summernote==0.8.20.0
 gunicorn==20.1.0
 oauthlib==3.2.2
+pillow==10.4.0
 psycopg2==2.9.9
 PyJWT==2.8.0
 python3-openid==3.2.0
